--- a/events-details-2/index.html
+++ b/events-details-2/index.html
@@ -15,15 +15,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="">
-    <nav class="bg-white text-black p-4 max-w-[1312px] mx-auto">
+    <nav class="bg-white text-black py-4 px-8 max-w-[1440px] mx-auto">
       <!-- Desktop View: Menu left, Logo center, Login right -->
-      <div class="hidden md:flex justify-between items-center font-medium">
-        <div class="flex space-x-6">
+      <div
+        class="hidden md:flex justify-between items-center font-medium relative"
+      >
+        <div class="flex space-x-8">
           <a href="#" class="hover:text-green-500 underline">Home Page</a>
           <a href="#" class="hover:text-green-500">Events List</a>
           <a href="#" class="hover:text-green-500">My Tickets</a>
         </div>
-        <div class="flex items-center space-x-2">
+        <div
+          class="absolute left-1/2 transform -translate-x-1/2 flex items-center space-x-2"
+        >
           <img src="./image/logo.jpg" alt="Logo Icon" class="h-8" />
         </div>
         <button
@@ -126,12 +130,12 @@
             /></span>
           </h2>
           <div
-            class="border-[1.5px] border-[#000000] text-[18px] md:text-[20px] font-bold p-2 mb-2 pl-3"
+            class="border-[1.5px] border-[#000000] text-[18px] md:text-[20px] font-bold px-4 py-3 mb-2"
           >
             Event Agenda
           </div>
           <ul
-            class="space-y-2 text-black font-medium text-[18px] md:text-[20px]"
+            class="space-y-6 text-black font-normal text-[18px] md:text-[20px]"
           >
             <li class="pl-[32px]">Featured Speakers</li>
             <li class="pl-[48px]">Interactive Activities</li>
@@ -241,10 +245,8 @@
         <p class="text-[#000000] font-karla mb-6">
           For any inquiries, please contact us directly.
         </p>
-        <div
-          class="flex mt-[80px] flex-col md:flex-row justify-start space-y-6 md:space-y-0 md:space-x-12"
-        >
-          <div class="space-y-2">
+        <div class="grid mt-[80px] grid-cols-1 md:grid-cols-3 gap-6">
+          <div class="space-y-4">
             <img src="./image/mail.jpg" alt="mail Icon" class="h-auto w-auto" />
             <p class="font-semibold test-[20px] text-[#000000]">Email</p>
             <p class="text-[16px] font-karla font-normal text-[#000000]">
@@ -254,7 +256,7 @@
               info@eventplatform.com
             </p>
           </div>
-          <div class="space-y-2">
+          <div class="space-y-4">
             <img src="./image/call.jpg" alt="call Icon" class="h-auto w-auto" />
             <p class="font-semibold test-[20px] text-[#000000]">Phone</p>
             <p class="text-[16px] font-karla font-normal text-[#000000]">
@@ -264,7 +266,7 @@
               +1 (555) 123-4567
             </p>
           </div>
-          <div class="space-y-2">
+          <div class="space-y-4">
             <img
               src="./image/location_on.jpg"
               alt="location_on"
@@ -293,67 +295,63 @@
 
     <h1 class="border-b-[0.5px] border-[#404040] my-[40px] md:my-[80px]"></h1>
     <!-- Footer Section -->
-    <footer class="bg-white py-10 px-4">
-      <div class="max-w-[1280px] mx-auto">
-        <!-- Top Section -->
-        <div
-          class="flex flex-col md:flex-row justify-between items-start gap-8 mb-8"
-        >
-          <!-- Logo & Links -->
-          <div class="w-full md:w-1/2">
-            <div class="flex items-center space-x-2 mb-4">
-              <img src="./image/logo.jpg" alt="Logo Icon" class="h-10 w-auto" />
-            </div>
-            <div
-              class="flex flex-col md:flex-row md:space-x-6 space-y-2 md:space-y-0 text-black text-base leading-[150%]"
-            >
-              <a href="#" class="hover:underline">Support Center</a>
-              <a href="#" class="hover:underline">FAQs</a>
-              <a href="#" class="hover:underline">Contact Us</a>
-            </div>
+    <footer class="bg-white px-6 py-10 max-w-[1380px] mx-auto">
+      <!-- Top Section -->
+      <div
+        class="flex flex-col md:flex-row justify-between items-start gap-8 mb-8"
+      >
+        <!-- Logo & Links -->
+        <div class="w-full md:w-1/2">
+          <div class="flex items-center space-x-2 mb-4">
+            <img src="./image/logo.jpg" alt="Logo Icon" class="h-10 w-auto" />
           </div>
-
-          <!-- Newsletter -->
-          <div class="w-full md:w-1/2">
-            <h3 class="text-lg text-[#000000] font-semibold mb-3">
-              Newsletter
-            </h3>
-            <div class="flex flex-col sm:flex-row gap-2 mb-3">
-              <input
-                type="email"
-                placeholder="Email"
-                class="border border-[#404040] rounded-md px-3 py-2 w-full sm:w-2/3 focus:outline-none"
-              />
-              <button
-                class="bg-black text-white px-4 py-2 rounded-md text-sm font-medium leading-[20px] w-full sm:w-auto"
-              >
-                Subscribe
-              </button>
-            </div>
-            <p class="text-[#000000] text-sm">
-              We respect your privacy and will never share your data.
-            </p>
-          </div>
-        </div>
-
-        <!-- Divider -->
-        <hr class="border-[#404040] mb-6" />
-
-        <!-- Bottom Section -->
-        <div
-          class="flex flex-col md:flex-row justify-between text-[#000000] text-sm space-y-4 md:space-y-0"
-        >
-          <!-- Links -->
           <div
-            class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-6 underline text-left"
+            class="flex flex-col md:flex-row md:space-x-6 space-y-2 md:space-y-0 text-black text-base leading-[150%]"
           >
-            <a href="#" class="hover:underline">Privacy Policy</a>
-            <a href="#" class="hover:underline">Terms of Service</a>
-            <a href="#" class="hover:underline">Cookies Settings</a>
+            <a href="#" class="hover:underline">Support Center</a>
+            <a href="#" class="hover:underline">FAQs</a>
+            <a href="#" class="hover:underline">Contact Us</a>
           </div>
-          <!-- Copyright -->
-          <p>© 2025 Event Platform. All rights reserved.</p>
         </div>
+
+        <!-- Newsletter -->
+        <div class="w-full md:w-1/2">
+          <h3 class="text-lg text-[#000000] font-semibold mb-3">Newsletter</h3>
+          <div class="flex flex-col sm:flex-row gap-2 mb-3">
+            <input
+              type="email"
+              placeholder="Email"
+              class="border border-[#404040] rounded-md px-3 py-2 w-full sm:w-2/3 focus:outline-none"
+            />
+            <button
+              class="bg-black text-white px-4 py-2 rounded-md text-sm font-medium leading-[20px] w-full sm:w-auto"
+            >
+              Subscribe
+            </button>
+          </div>
+          <p class="text-[#000000] text-sm">
+            We respect your privacy and will never share your data.
+          </p>
+        </div>
+      </div>
+
+      <!-- Divider -->
+      <hr class="border-[#404040] mb-6" />
+
+      <!-- Bottom Section -->
+      <div
+        class="flex flex-col md:flex-row justify-between text-[#000000] text-sm space-y-4 md:space-y-0"
+      >
+        <!-- Links -->
+        <div
+          class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-6 underline text-left"
+        >
+          <a href="#" class="hover:underline">Privacy Policy</a>
+          <a href="#" class="hover:underline">Terms of Service</a>
+          <a href="#" class="hover:underline">Cookies Settings</a>
+        </div>
+        <!-- Copyright -->
+        <p>© 2025 Event Platform. All rights reserved.</p>
       </div>
     </footer>
   </body>
