--- a/checkout-modal-3/index.html
+++ b/checkout-modal-3/index.html
@@ -27,15 +27,17 @@
         class="bg-cyan-100 w-full md:w-[448px] flex flex-col p-4 md:p-10 pb-6 md:pb-0 flex-shrink-0"
       >
         <div class="flex items-center flex-col gap-3 mb-6 pt-4 md:pt-10">
-          <!-- Stepper -->
-          <div class="flex items-center justify-center mb-8 md:hidden">
+          <!-- Stepper Mobile -->
+          <div
+            class="flex items-center max-w-[330px] justify-center mb-8 md:hidden"
+          >
             <div class="flex flex-col items-center">
               <div
                 class="w-10 h-10 rounded-full border-2 border-cyan-500 flex items-center justify-center bg-white text-cyan-500 font-bold text-lg"
               >
                 ✓
               </div>
-              <span class="mt-2 text-sm font-semibold text-gray-800"
+              <span class="mt-2 text-sm font-normal text-gray-800"
                 >Information</span
               >
             </div>
@@ -46,18 +48,18 @@
               >
                 2
               </div>
-              <span class="mt-2 text-sm font-semibold text-gray-800"
+              <span class="mt-2 text-sm font-normal text-gray-800"
                 >Payment</span
               >
             </div>
-            <div class="w-16 h-0.5 mx-2 bg-gray-300 self-start mt-5"></div>
+            <div class="w-16 h-0.5 mx-2 bg-white self-start mt-5"></div>
             <div class="flex flex-col items-center">
               <div
                 class="w-10 h-10 rounded-full border-2 border-gray-400 flex items-center justify-center bg-white text-gray-400 font-bold text-lg"
               >
                 3
               </div>
-              <span class="mt-2 text-sm font-semibold text-gray-400"
+              <span class="mt-2 text-sm font-normal text-gray-400"
                 >Complete</span
               >
             </div>
