--- a/event-dashboard-6/index.html
+++ b/event-dashboard-6/index.html
@@ -1025,10 +1025,18 @@
                 >
                   <div class="flex items-center gap-4">
                     <div
-                      class="bg-event-badge rounded-[8px] px-5 flex flex-col items-center justify-center h-[80px] w-[60px]"
+                      class="bg-[#89EB8EA6] rounded-[8px] px-5 flex flex-col items-center justify-center h-[80px] w-[60px]"
                     >
-                      <div class="text-3xl font-bold text-[#000000]">6</div>
-                      <div class="text-sm font-medium text-[#000000]">Fri</div>
+                      <div
+                        class="text-2xl font-medium font-poppins text-[#000000]"
+                      >
+                        6
+                      </div>
+                      <div
+                        class="text-lg font-[300] font-poppins text-[#000000]"
+                      >
+                        Fri
+                      </div>
                     </div>
 
                     <div class="">
@@ -1116,10 +1124,18 @@
                 >
                   <div class="flex items-center gap-4">
                     <div
-                      class="bg-event-badge rounded-[8px] px-5 flex flex-col items-center justify-center h-[80px] w-[60px]"
+                      class="bg-[#89EB8EA6] rounded-[8px] px-5 flex flex-col items-center justify-center h-[80px] w-[60px]"
                     >
-                      <div class="text-3xl font-bold text-[#000000]">9</div>
-                      <div class="text-sm font-medium text-[#000000]">Mon</div>
+                      <div
+                        class="text-2xl font-medium font-poppins text-[#000000]"
+                      >
+                        9
+                      </div>
+                      <div
+                        class="text-lg font-poppins font-[300] text-[#000000]"
+                      >
+                        Mon
+                      </div>
                     </div>
 
                     <div class="">
@@ -1207,10 +1223,18 @@
                 >
                   <div class="flex items-center gap-4">
                     <div
-                      class="bg-event-badge rounded-[8px] px-5 flex flex-col items-center justify-center h-[80px] w-[60px]"
+                      class="bg-[#89EB8EA6] rounded-[8px] px-5 flex flex-col items-center justify-center h-[80px] w-[60px]"
                     >
-                      <div class="text-3xl font-bold text-[#000000]">12</div>
-                      <div class="text-sm font-medium text-[#000000]">Thu</div>
+                      <div
+                        class="text-2xl font-medium font-poppins text-[#000000]"
+                      >
+                        12
+                      </div>
+                      <div
+                        class="text-sm font-[300] font-poppins text-[#000000]"
+                      >
+                        Thu
+                      </div>
                     </div>
 
                     <div class="">
