--- a/event-dashboard-7/index.html
+++ b/event-dashboard-7/index.html
@@ -84,33 +84,37 @@
       <div class="flex-1 pl-[10px] overflow-auto">
         <!-- Header -->
         <div
-          class="flex justify-between items-center mb-4 bg-[#C3F8FF] px-10 rounded-[10px] py-3"
+          class="flex justify-between items-center mb-4 bg-[#C3F8FF] px-12 rounded-[10px] py-4 mobile-header"
         >
-          <h1 class="text-2xl font-medium text-[#09090B]">Dashboard</h1>
-          <div class="flex items-center space-x-4">
-            <span class="text-[#000000]"
+          <h1 class="text-4xl font-medium font-poppins text-[#09090B]">
+            Dashboard
+          </h1>
+          <div class="flex items-center space-x-4 mobile-user-info">
+            <span class="mr-5"
               ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 24 24"
-                width="32"
-                height="32"
+                width="40"
+                height="40"
+                viewBox="0 0 40 40"
                 fill="none"
-                stroke="currentColor"
-                stroke-width="1.8"
-                stroke-linecap="round"
-                stroke-linejoin="round"
+                xmlns="http://www.w3.org/2000/svg"
               >
-                <path d="M18 8a6 6 0 1 0-12 0c0 7-3 9-3 9h18s-3-2-3-9" />
-                <path d="M13.73 21a2 2 0 0 1-3.46 0" />
+                <path
+                  d="M32.3333 24.8335C33.6667 27.3335 35 28.3335 35 28.3335H5C5 28.3335 10 25.0002 10 13.3335C10 7.8335 14.5 3.3335 20 3.3335C21.1667 3.3335 22.1667 3.50016 23.1667 3.8335M17.1667 35.0002C17.4457 35.5076 17.8558 35.9307 18.3542 36.2255C18.8526 36.5202 19.421 36.6757 20.0001 36.6757C20.5791 36.6757 21.1475 36.5202 21.6459 36.2255C22.1443 35.9307 22.5544 35.5076 22.8334 35.0002M35 13.3335C35 16.0949 32.7614 18.3335 30 18.3335C27.2386 18.3335 25 16.0949 25 13.3335C25 10.5721 27.2386 8.3335 30 8.3335C32.7614 8.3335 35 10.5721 35 13.3335Z"
+                  stroke="#09090B"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
               </svg>
             </span>
             <div
-              class="w-8 h-8 bg-purple-500 rounded-full flex items-center justify-center text-white text-xs"
+              class="rounded-full flex items-center justify-center text-white text-xs"
             >
-              TS
+              <img src="../event-dashboard-6/image/profile.svg" alt="Profile" />
             </div>
-            <span class="text-[#09090B]"
-              >Tukai Saleh<br /><span class="text-sm text-gray-500"
+            <span
+              class="text-[#09090B] text-lg font-korla font-medium md:text-base"
+              >Tukai Saleh<br /><span class="text-xs md:text-xs text-gray-700"
                 >Event Organiser</span
               ></span
             >
@@ -537,19 +541,90 @@
 
           <!-- Bottom Pagination and Create Button -->
           <div class="flex justify-between items-center mt-[53px]">
-            <div class="flex space-x-2">
-              <button class="text-[#09090B]">&lt;</button>
-              <button class="bg-[#26D9F3] text-[#09090B] px-2 py-1 rounded-md">
-                1
+            <div class="flex items-center space-x-4">
+              <!-- Previous Button -->
+              <button
+                class="flex items-center justify-center w-10 h-10 hover:bg-gray-100 rounded transition-colors"
+                onclick="previousPage()"
+              >
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M10 12L6 8L10 4"
+                    stroke="#09090B"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
               </button>
-              <button class="text-[#09090B]">2</button>
-              <button class="text-[#09090B]">3</button>
-              <span class="text-[#09090B]">...</span>
-              <button class="text-[#09090B]">6</button>
-              <button class="text-[#09090B]">&gt;</button>
+
+              <!-- Page Numbers -->
+              <div class="flex items-center space-x-2">
+                <button
+                  class="w-10 h-10 flex items-center justify-center text-[#09090B] text-[16px] font-medium hover:bg-gray-100 rounded transition-colors"
+                  onclick="goToPage(1)"
+                >
+                  1
+                </button>
+                <button
+                  class="w-10 h-10 flex items-center justify-center bg-[#11D8F5] bg-opacity-90 text-[#09090B] text-[16px] font-medium rounded shadow-lg"
+                  onclick="goToPage(2)"
+                >
+                  2
+                </button>
+                <button
+                  class="w-10 h-10 flex items-center justify-center text-[#09090B] text-[16px] font-medium hover:bg-gray-100 rounded transition-colors"
+                  onclick="goToPage(3)"
+                >
+                  3
+                </button>
+
+                <!-- Ellipsis -->
+                <div class="flex items-center space-x-1 px-2">
+                  <div class="w-1 h-1 bg-[#09090B] rounded-full"></div>
+                  <div class="w-1 h-1 bg-[#09090B] rounded-full"></div>
+                  <div class="w-1 h-1 bg-[#09090B] rounded-full"></div>
+                </div>
+
+                <button
+                  class="w-10 h-10 flex items-center justify-center text-[#09090B] text-[16px] font-medium hover:bg-gray-100 rounded transition-colors"
+                  onclick="goToPage(6)"
+                >
+                  6
+                </button>
+              </div>
+
+              <!-- Next Button -->
+              <button
+                class="flex items-center justify-center w-10 h-10 hover:bg-gray-100 rounded transition-colors"
+                onclick="nextPage()"
+              >
+                <svg
+                  width="16"
+                  height="16"
+                  viewBox="0 0 16 16"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M6 12L10 8L6 4"
+                    stroke="#09090B"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
             </div>
+
             <button
-              class="bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-[0_8px_32px_0_rgba(0,0,0,0.18)] text-[#000000] text-[18px] font-karla py-2 px-4 rounded-md flex items-center gap-2"
+              class="bg-gradient-to-r from-[#89EB8E] to-[#11D8F5] shadow-[0_8px_32px_0_rgba(0,0,0,0.18)] text-[#000000] text-[18px] font-karla py-2 px-4 rounded-md flex items-center gap-2 hover:shadow-lg transition-shadow"
             >
               <span><img src="./image/square-plus.svg" alt="" /></span> Create
               Event
@@ -558,5 +633,57 @@
         </div>
       </div>
     </div>
+
+    <script>
+      // Pagination functionality
+      let currentPage = 2; // Starting at page 2 as shown in design
+      const totalPages = 6;
+
+      function updatePagination() {
+        const pageButtons = document.querySelectorAll('[onclick^="goToPage"]');
+        pageButtons.forEach((button) => {
+          const pageNum = parseInt(button.textContent);
+          if (pageNum === currentPage) {
+            button.className =
+              "w-10 h-10 flex items-center justify-center bg-[#11D8F5] bg-opacity-90 text-[#09090B] text-[16px] font-medium rounded shadow-lg";
+          } else {
+            button.className =
+              "w-10 h-10 flex items-center justify-center text-[#09090B] text-[16px] font-medium hover:bg-gray-100 rounded transition-colors";
+          }
+        });
+      }
+
+      function goToPage(pageNumber) {
+        if (pageNumber >= 1 && pageNumber <= totalPages) {
+          currentPage = pageNumber;
+          updatePagination();
+          console.log(`Navigating to page ${pageNumber}`);
+          // Add your page navigation logic here
+        }
+      }
+
+      function previousPage() {
+        if (currentPage > 1) {
+          currentPage--;
+          updatePagination();
+          console.log(`Navigating to page ${currentPage}`);
+          // Add your page navigation logic here
+        }
+      }
+
+      function nextPage() {
+        if (currentPage < totalPages) {
+          currentPage++;
+          updatePagination();
+          console.log(`Navigating to page ${currentPage}`);
+          // Add your page navigation logic here
+        }
+      }
+
+      // Initialize pagination on page load
+      document.addEventListener("DOMContentLoaded", function () {
+        updatePagination();
+      });
+    </script>
   </body>
 </html>
